--- a/client/src/components/CharacterDetails.css
+++ b/client/src/components/CharacterDetails.css
@@ -21,7 +21,7 @@
   font-family: 'Permanent Marker', cursive;  
   font-size: 30px;
   border: blue solid 4px;
-  font-display: center;
+  /* display: center; */
 }
   
 
